--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="static/js/app.js"></script>
+  <script src="./static/js/app.js"></script>
   <!-- <script src="./static/js/bonus.js"></script> -->
-  <script src="data/samples.json"></script>
+  <!-- <script src="data/samples.json"></script> -->
   
 </body>
 
